// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Formatted Address > should not render without address 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  />
</div>
`;

exports[`Formatted Address > should render address only 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with center alignment 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 min-w-0"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with horizontal orientation 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with horizontal orientation 2`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with normal font 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <span
      class="font-normal text-base text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="no-ligatures css-9nx3be"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-normal text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with right alignment 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with truncate on table = false 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with truncate on table = true 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <div
        class="relative grow text-left"
      >
        <span
          class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base absolute w-full"
          data-testid="Address__address"
        >
          ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
        </span>
        <span>
           
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with vertical orientation 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with vertical orientation 2`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
  >
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;

exports[`Formatted Address > should render with wallet name 1`] = `
<div>
  <div
    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
  >
    <span
      class="font-semibold text-base text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="no-ligatures css-9nx3be"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <div
      data-testid="Address__address-container"
    >
      <span
        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
        data-testid="Address__address"
      >
        ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
      </span>
    </div>
  </div>
</div>
`;
